--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "note-taker",
+  "name": "notes",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "lowdb": "^3.0.0"
   }
 }
